--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@
 				challenge in February using Processing. By the end of the challenge, he had created a point cloud
 				version of the mandelbulb! He was kind
 				enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
-				that were interested in tryng to render the mandelbulb. This was the start of my journey--see below
-				for my earliest attempts.
+				that were interested in tryng to render the mandelbulb. After some earlier attempts (see below) to apply
+				a mesh to
+				the vertices, Dan Shiffman consulted with some colleauges and concluded that using a SDF would
+				be a better approach. During a livestream on Twitch, he explored this possibility and provided the
+				background to render the mandelbulb.
+				<br>
+				<a class="link" href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
 				<br>
 				<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
 					Mandelbulb</a></p>
 			<p>
-				At this point, I have rendered the mandelbulb using several different lighting techniques. There is
+				I have rendered the mandelbulb using several different lighting techniques. There is
 				still a lot of room for improvement--I do not have true edge detection and there is aliasing when
 				the mandelbulbs are animated. Nonetheless, I am still excited with the results, especially the thee
 				color version. </p>
@@ -154,39 +159,29 @@
 	</div>
 	<div class="d-flex flex-row" id="myDIV3">
 		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-			<h2>Earlier Attempts</h2>
+
 			<p>
+				<h2>Attempt #1: MeshLab</h2>
+				<br>
 				I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
-				the
-				vertices (all 206,828 of them)
-				into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
-				looked
-				rather like a pin cushion because
-				the normals were facing the wrong direction! I eventually came up with this version. While not
-				horrible,
-				it is not fully rendered and it kind of looks
-				the mandelbulb is in prison.
+				the vertices (all 206,828 of them) into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
+				looked rather like a pin cushion because the normals were facing the wrong direction! I eventually came up with this version. While not
+				completely horrible, it is not fully rendered and it kind of looks the mandelbulb is in a cage.
 				<br>
 				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
 				<br>
 		</div>
 		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb5">
+			<h2>Attempt #2: Blender</h2>
 			For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
-			like a very low-res version of the mandelbulb, but still
-			doesn't compare to the beauty of a nicely rendered version.
+			like a very low-res version of the mandelbulb.
 			<br>
 			<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
-			<br>
-			By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
-			be a
-			better approach. During a livestream on Twitch, he explored this possibility and provided the
-			background
-			that I ultimately used to render the mandelbulb. <a class="link"
-				href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
+
 			</p>
 		</div>
 	</div>
-	
+
 	<!-- javascript -->
 	<!-- This function toggles a read more button -->
 	<script>
