--- a/index.html
+++ b/index.html
@@ -54,136 +54,175 @@
 				version of the mandelbulb! He was kind
 				enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
 				that were interested in tryng to render the mandelbulb. After some early attempts to apply
-				a mesh to the vertices (see below), Dan Shiffman consulted with some colleauges and concluded that using a shader with a 
-				signed distance function would be a better approach. During a livestream on Twitch, he explored this possibility and provided the necessary 
+				a mesh to the vertices (see below), Dan Shiffman consulted with some colleauges and concluded that using
+				a shader with a
+				signed distance function would be a better approach. During a livestream on Twitch, he explored this
+				possibility and provided the necessary
 				background to render the mandelbulb.
 				<br>
 				<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
 					Mandelbulb</a>
 				<a class="link" href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
-				<br></p>	
-				
+				<br></p>
+
 			<p>
-				I have rendered the mandelbulb using several different lighting techniques. There is
-				still a lot of room for improvement--I do not have true edge detection and there is aliasing when
-				the mandelbulbs are animated. Nonetheless, I am still excited with the results, especially the thee
-				color version. </p>
+				By now, I have rendered the mandelbulb using several different lighting and coloring techniques. I think
+				the best effort so far is the pastel version, altough there is still
+				room for improvement.</p>
 			<p>
-				
+
 			</p>
 		</div>
 	</div>
-	<div class="d-flex flex-row" id="myDIV1">
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
+	<div class="container" id="myDIV1">
+		<div class="row">
+			<div class="mandelbulb" id="mandelbulb1">
 
-			<p>
-				<h2>Three Color Mandelbulb</h2>
+				<p>
+					<h2>Pastel Mandelbulb</h2>
+					<br>
+					This version is my attempt at coloring the mandelbulb based on edge detection. It is certainly not
+					as
+					good as some of the amazing verson you can find on the web (such as the ones by <a class="link"
+						href="https://iquilezles.org/articles/mandelbulb/">Inigo Quilez</a>). I think
+					that if someone did a watercolor of the mandelbulb, this is what it might look like.
+					<br>
+				</p>
 				<br>
-				This rendered version uses the lighting techniques described in The Art of Code: Bending lighting"
-				youtube tutorial by Martijn Steinrucken. Rather than the more advanced method of coloring the
-				mandelbulb using edge detection, each of the x, y, z dimensions is assigned a different RGB color.
 				<br>
-				<a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
-			</p>
-			<br>
-			<br>
-			<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
-			<br>
-			<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
-				sketch</a></a>
-			<br>
-			<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
-		</div>
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
+				<img class="img" src="assets/pastel.jpg" alt="Pastel Mandelbulb" width="500" height="500">
+				<br>
+				<a class="link" href="https://editor.p5js.org/kfahn/full/U6_U2XHJj">Pastel mandelbulb sketch</a></a>
+				<br>
+				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/edge-detection">Code</a></a>
+			</div>
+			<div class="mandelbulb" id="mandelbulb2">
 
-			<p>
-				<h2>One Color Mandelbulb</h2>
+				<p>
+					<h2>Three Color Mandelbulb</h2>
+					<br>
+					This rendered version uses the lighting techniques described in <a class="link"
+						href="https://www.youtube.com/watch?v=0RWaR7zApEo">The Art of Code: Bending Light</a>
+					youtube tutorial by Martijn Steinrucken. Rather than the more advanced method of coloring the
+					mandelbulb using edge detection, each of the x, y, z dimensions is assigned a different RGB color.
+					<br>
+				</p>
 				<br>
-				This version uses the basic ray marching starting point provided by Martijn Steinrucken. I think the mandelbulb is too dark--I believe that the  
-				diffuse lighting needs improvement.
 				<br>
-				<a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching Starting Point</a></a>
+				<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
 				<br>
-				<br>
-				<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500" height="500">
-				<br>
-				<a class="link" href="https://editor.p5js.org/kfahn/full/2w56dWbzL">Single color mandelbulb
+				<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
 					sketch</a></a>
 				<br>
-				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/One%20Color">Code</a></a>
-			</p>
-		</div>
-	</div>
-	<div class="d-flex flex-row" id="myDIV2">
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb3">
+				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
+			</div>
+			<div class="mandelbulb" id="mandelbulb3">
 
-			<p>
-				<h2>Mandelbulb using Inigo Quilez lighting</h2>
-				<br>
-				This version uses the lighting techniques of Inigo Quilez in his Happy Jumping youtube
-				tutorial (a truely wonderful tutorial!). Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
-				of a blobby monster jumping. I had a hard time trying to figure out how to change his 
-				lighting parameters--I think this is the reason that this version is over-exposed. There is also quite a
-				bit of aliasing when it is animated. Improving the lighting and animation are avenues for future
-				improvement.
-				<br>
-				<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
-					Maths</a></a>.
-				<br>
-				<br>
-				<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500" height="500">
-				<br>
-				<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
-					sketch</a></a>
-				<br>
-				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
-			</p>
-		</div>
+				<p>
+					<h2>One Color Mandelbulb</h2>
+					<br>
+					This version uses the <a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching
+						Starting Point</a> tutorial by Martijn Steinrucken. I think the
+					mandelbulb is too dark--I believe that the diffuse lighting needs improvement.
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500"
+						height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/2w56dWbzL">Single color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/One%20Color">Code</a></a>
+				</p>
+			</div>
+			<div class="mandelbulb" id="mandelbulb4">
+				<p>
+					<h2>Mandelbulb using Inigo Quilez lighting</h2>
+					<br>
+					This version uses the lighting techniques of Inigo Quilez in his <a class="link"
+						href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">LIVE Coding "Happy Jumping"</a></a>
+					tutorial (truely wonderful!) Inigo Quilez is an expert at lighting, and the parameters
+					were optimized for his animation
+					of a blobby monster jumping. I had a hard time trying to figure out how to change his
+					lighting parameters--I think this is the reason that this version is over-exposed. There is also
+					quite a
+					bit of aliasing when it is animated. Improving the lighting and animation are avenues for future
+					improvement.
+					<br>
+					<br>
+					<br>
+					<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2"
+						width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
+				</p>
+			</div>
 
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+			<div class="mandelbulb" id="mandelbulb5">
 
-			<p>
-				<h2>"Crystal" mandelbulb</h2>
-				<br>
-				This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
-				sketch--which uses phong illumination--as a guide.  I think it is pretty cool looking, but it doesn't animate well. 
-				I suspect this is due to the raydirection function, and I hope to investigate further to see if I can get this version to animate.
-				<br>
-				<a class="link" href="https://www.shadertoy.com/view/llt3R4">Jamie
-					Wong's shadertoy code</a>
-				<br>
-				<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
-				<br>
-				<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
-					sketch</a></a>
-				<br>
-				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
-			</p>
-		</div>
-	</div>
-	<div class="d-flex flex-row" id="myDIV3">
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+				<p>
+					<h2>"Crystal" mandelbulb</h2>
+					<br>
+					This is my first render of the mandelbulb in p5.js. I started out using <a class="link"
+						href="https://www.shadertoy.com/view/llt3R4">Jamie
+						Wong's shadertoy code</a>--which uses phong illumination--as a guide. I think it is pretty cool
+					looking, but it doesn't
+					animate well.
+					I suspect this is due to the raydirection function, and I hope to investigate further to see if I
+					can get this version to animate.
+					<br>
+					<br>
+					<br>
+					<br>
+					<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
+				</p>
+			</div>
 
-			<p>
-				<h2>Attempt #1: MeshLab</h2>
-				<br>
-				I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
-				the vertices (all 206,828 of them) into MeshLab and used a guide a found in github to try to mesh the
-				vertices. The first version looked rather like a pin cushion because the normals were facing the wrong direction! I eventually came
-				up with this version. While not bad, it is not fully rendered and it kind of looks the mandelbulb
-				is in a cage.
-				<br>
-				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
-				<br>
-		</div>
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb5">
-			<h2>Attempt #2: Blender</h2>
-			For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
-			kind of like a very simplified version of a mandelbulb.
-			<br>
-			<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
+			<div class="mandelbulb" id="mandelbulb6">
 
-			</p>
+				<p>
+					<h2>Attempt #1: MeshLab</h2>
+					<br>
+					I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
+					the vertices (all 206,828 of them) into MeshLab and used a guide a found in github to try to mesh
+					the
+					vertices. The first version looked rather like a pin cushion because the normals were facing the
+					wrong direction! I eventually came
+					up with this version. While not bad, it is not fully rendered and it kind of looks the mandelbulb
+					is in a cage.
+					<br>
+					<br>
+					<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
+					<br>
+			</div>
+			<div class="mandelbulb" id="mandelbulb7">
+				<h2>Attempt #2: Blender</h2>
+				For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
+				kind of like a very simplified version of a mandelbulb.
+				<br>
+				<br>
+				<br>
+
+				<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
+
+				</p>
+			</div>
 		</div>
 	</div>
 
